--- a/debian/control.in
+++ b/debian/control.in
@@ -306,9 +306,9 @@ Depends:
 Recommends:
  ${nvidia}-driver-libs-i386 [amd64],
  libopengl0 | libopengl0-glvnd-nvidia,
- libglx-${nvidia}0 (= ${binary:Version}),
- libgles-${nvidia}1 (= ${binary:Version}),
- libgles-${nvidia}2 (= ${binary:Version}),
+ libglx-${nvidia-}0 (= ${binary:Version}),
+ libgles-${nvidia-}1 (= ${binary:Version}),
+ libgles-${nvidia-}2 (= ${binary:Version}),
  lib${nvidia}-cfg1 (= ${binary:Version}),
  ${nvidia}-vulkan-icd (= ${binary:Version}) [amd64 i386],
 Conflicts:
@@ -352,9 +352,9 @@ Depends:
  ${misc:Depends}
 Recommends:
  ${nvidia}-driver-libs-nonglvnd-i386 [amd64],
- libglx-${nvidia}0 (= ${binary:Version}),
- libgles-${nvidia}1 (= ${binary:Version}),
- libgles-${nvidia}2 (= ${binary:Version}),
+ libglx-${nvidia-}0 (= ${binary:Version}),
+ libgles-${nvidia-}1 (= ${binary:Version}),
+ libgles-${nvidia-}2 (= ${binary:Version}),
  lib${nvidia}-cfg1 (= ${binary:Version}),
  ${nvidia}-nonglvnd-vulkan-icd (= ${binary:Version}) [amd64 i386],
 Conflicts:
@@ -451,7 +451,7 @@ Description: Vendor neutral GL dispatch library -- libGLX
  This package contains the (binary) GLVND libGLX.so.0 stub library provided by
  NVIDIA which dispatches to vendor implementations (libGLX_*.so.0) via GLVND.
 
-Package: libglx-${nvidia}0
+Package: libglx-${nvidia-}0
 Architecture: i386 amd64 armhf
 Multi-Arch: same
 Pre-Depends:
@@ -500,7 +500,7 @@ Architecture: i386 amd64 armhf
 Multi-Arch: same
 Depends:
  libgl1 (>= 0.2.999) | libgl1-glvnd-nvidia-glx,
- libglx-${nvidia}0 (= ${binary:Version}),
+ libglx-${nvidia-}0 (= ${binary:Version}),
  ${misc:Depends}
 Provides:
  libgl1-nvidia-glx-any,
@@ -603,7 +603,7 @@ Pre-Depends:
  ${misc:Pre-Depends}
 Depends:
  ${nvidia}-alternative (= ${binary:Version}),
- libegl-${nvidia}0 (= ${binary:Version}),
+ libegl-${nvidia-}0 (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
 Conflicts:
  ${nvidia}-driver-libs,
@@ -615,7 +615,7 @@ Description: NVIDIA binary EGL library (non-GLVND variant)${nvidia:LegacyDesc}
  This package contains the driver specific binary EGL implementation by NVIDIA
  as a non-GLVND alternative.
 
-Package: libegl-${nvidia}0
+Package: libegl-${nvidia-}0
 Architecture: i386 amd64 armhf
 Multi-Arch: same
 Pre-Depends:
@@ -673,7 +673,7 @@ Multi-Arch: same
 Pre-Depends:
  ${misc:Pre-Depends}
 Depends:
- libgles-${nvidia}1 (= ${binary:Version}),
+ libgles-${nvidia-}1 (= ${binary:Version}),
  ${misc:Depends}
 Description: NVIDIA binary OpenGL|ES 1.x library (transitional)${nvidia:LegacyDesc}
  OpenGL|ES is a cross-platform API for full-function 2D and 3D graphics on
@@ -686,7 +686,7 @@ Description: NVIDIA binary OpenGL|ES 1.x library (transitional)${nvidia:LegacyDe
  This is a transitional package to aid switching to the GLVND based
  implementation.
 
-Package: libgles-${nvidia}1
+Package: libgles-${nvidia-}1
 Architecture: i386 amd64 armhf
 Multi-Arch: same
 Pre-Depends:
@@ -750,7 +750,7 @@ Multi-Arch: same
 Pre-Depends:
  ${misc:Pre-Depends}
 Depends:
- libgles-${nvidia}2 (= ${binary:Version}),
+ libgles-${nvidia-}2 (= ${binary:Version}),
  ${misc:Depends}
 Description: NVIDIA binary OpenGL|ES 2.x library (transitional)${nvidia:LegacyDesc}
  OpenGL|ES is a cross-platform API for full-function 2D and 3D graphics on
@@ -764,7 +764,7 @@ Description: NVIDIA binary OpenGL|ES 2.x library (transitional)${nvidia:LegacyDe
  This is a transitional package to aid switching to the GLVND based
  implementation.
 
-Package: libgles-${nvidia}2
+Package: libgles-${nvidia-}2
 Architecture: i386 amd64 armhf
 Multi-Arch: same
 Pre-Depends:
@@ -819,7 +819,7 @@ Multi-Arch: foreign
 Depends:
  ${misc:Depends}
 Suggests:
- libegl-${nvidia}0
+ libegl-${nvidia-}0
  | libegl-nvidia-legacy-390xx0,
 Description: NVIDIA binary EGL driver - common files
  EGL provides a platform-agnostic mechanism for creating rendering surfaces
@@ -834,7 +834,7 @@ Multi-Arch: same
 Depends:
  nvidia-egl-common,
  libegl1 (>= 0.2.999) | libegl1-glvnd-nvidia,
- libegl-${nvidia}0 (= ${binary:Version}),
+ libegl-${nvidia-}0 (= ${binary:Version}),
  ${misc:Depends}
 Enhances:
  libegl1,
@@ -904,7 +904,7 @@ Multi-Arch: same
 Depends:
  nvidia-vulkan-common,
  libvulkan1,
- libglx-${nvidia}0 (= ${binary:Version}),
+ libglx-${nvidia-}0 (= ${binary:Version}),
  ${misc:Depends}
 Suggests:
  vulkan-utils,
