nvidia-tesla is going to be renamed to nvidia-tesla-418

--- a/debian/control.in
+++ b/debian/control.in
@@ -90,6 +90,7 @@ Conflicts:
 Breaks:
  nvidia-driver (<< 343.22-2~),
  libcuda1 (<< 352.63),
+ nvidia-tesla-alternative (>> 0),
 Description: allows the selection of NVIDIA as GLX provider${nvidia:LegacyDesc}
  In setups with several NVIDIA driver versions installed (e.g. current and
  legacy) this metapackage registers an alternative to allow easy switching
@@ -777,7 +778,7 @@ Depends:
  ${misc:Depends}
 Suggests:
  libegl-${nvidia}0 [i386 amd64 ${arch:ppc64el}]
- | libegl-nvidia-tesla0 [!i386 !armhf]
+ | libegl-nvidia-tesla-418-0 [!i386 !armhf]
  | libegl-nvidia-legacy-390xx0 [!ppc64el],
 Description: NVIDIA binary EGL driver - common files
  EGL provides a platform-agnostic mechanism for creating rendering surfaces
@@ -845,11 +846,11 @@ Depends:
  ${misc:Depends}
 Suggests:
  ${nvidia}-vulkan-icd [i386 amd64 ${arch:ppc64el}]
- | nvidia-tesla-vulkan-icd [!i386]
+ | nvidia-tesla-418-vulkan-icd [!i386]
  | nvidia-legacy-390xx-vulkan-icd [!ppc64el],
 Conflicts:
  libgl1-${nvidia}-glx,
- libgl1-nvidia-tesla-glx,
+ libgl1-nvidia-tesla-418-glx,
  libgl1-nvidia-legacy-390xx-glx,
  nvidia-nonglvnd-vulkan-common,
 Description: NVIDIA Vulkan driver - common files
@@ -891,11 +892,11 @@ Depends:
  ${misc:Depends}
 Suggests:
  ${nvidia}-nonglvnd-vulkan-icd [i386 amd64 ${arch:ppc64el}]
- | nvidia-tesla-nonglvnd-vulkan-icd [!i386]
+ | nvidia-tesla-418-nonglvnd-vulkan-icd [!i386]
  | nvidia-legacy-390xx-nonglvnd-vulkan-icd [!ppc64el],
 Conflicts:
  libgl1-${nvidia}-glvnd-glx,
- libgl1-nvidia-tesla-glvnd-glx,
+ libgl1-nvidia-tesla-418-glvnd-glx,
  libgl1-nvidia-legacy-390xx-glvnd-glx,
  nvidia-vulkan-common,
 Description: NVIDIA Vulkan driver - common files (non-GLVND variant)
@@ -1271,7 +1272,7 @@ Depends:
  ${misc:Depends}
 Suggests:
  ${nvidia}-opencl-icd [i386 amd64 ${arch:ppc64el}]
- | nvidia-tesla-opencl-icd [!i386]
+ | nvidia-tesla-418-opencl-icd [!i386]
  | nvidia-legacy-390xx-opencl-icd [!ppc64el],
 Description: NVIDIA OpenCL driver - common files
  OpenCL (Open Computing Language) is a multivendor open standard for
@@ -1346,4 +1347,4 @@ Description: NVIDIA GPU detection utility
  The 'nvidia-detect' script in this package checks for an NVIDIA GPU in the
  system and recommends one of the non-free accelerated driver meta-packages
  (nvidia-driver, nvidia-legacy-390xx-driver, nvidia-legacy-340xx-driver, or
- nvidia-tesla-driver) for installation.
+ nvidia-tesla-418-driver) for installation.
