--- a/debian/control.in
+++ b/debian/control.in
@@ -52,7 +52,7 @@ Breaks:
  nvidia-glx${nvidia:Legacy},
 Replaces:
  nvidia-glx${nvidia:Legacy},
-Description: NVIDIA metapackage${nvidia:LegacyDesc}
+Description: NVIDIA metapackage${nvidia:VariantDesc}
  This metapackage depends on the NVIDIA binary driver and libraries
  that provide optimized hardware acceleration of
  OpenGL/GLX/EGL/GLES/Vulkan applications via a direct-rendering X Server.
@@ -89,7 +89,7 @@ Breaks:
  libnvcuvid1 (<< 340.46-2~),
  libnvidia-ml1 (<< 340.46-2~),
  nvidia-smi (<< 340.46-2~),
-Description: allows the selection of NVIDIA as GLX provider${nvidia:LegacyDesc}
+Description: allows the selection of NVIDIA as GLX provider${nvidia:VariantDesc}
  In setups with several NVIDIA driver versions installed (e.g. current and
  legacy) this metapackage registers an alternative to allow easy switching
  between the different versions.
@@ -117,7 +117,7 @@ Breaks:
  glx-alternative-nvidia (<< 0.6.91),
 Replaces:
  glx-alternative-nvidia (<< 0.6.91),
-Description: NVIDIA binary kernel module support files${nvidia:LegacyDesc}
+Description: NVIDIA binary kernel module support files${nvidia:VariantDesc}
  The NVIDIA binary driver provides optimized hardware acceleration of
  OpenGL/GLX/EGL/GLES applications via a direct-rendering X Server
  for graphics cards using NVIDIA chip sets.
@@ -138,7 +138,7 @@ Recommends:
  ${nvidia}-driver (>= ${nvidia:Version}) [!ppc64el] | ${libcuda1} (>= ${nvidia:Version}),
 Provides:
  ${nvidia}-kernel-${nvidia:Version},
-Description: NVIDIA binary kernel module DKMS source${nvidia:LegacyDesc}
+Description: NVIDIA binary kernel module DKMS source${nvidia:VariantDesc}
  This package builds the NVIDIA Xorg binary kernel module needed by
  ${nvidia}-driver, using DKMS.
  Provided that you have the kernel header packages installed, the kernel
@@ -174,7 +174,7 @@ Suggests:
  ${nvidia}-driver (>= ${nvidia:Version}) [!ppc64el],
 Breaks:
  module-assistant (<< 0.11.6~),
-Description: NVIDIA binary kernel module source${nvidia:LegacyDesc}
+Description: NVIDIA binary kernel module source${nvidia:VariantDesc}
  This package provides the source for the NVIDIA Xorg binary kernel module
  needed by ${nvidia}-driver in a form suitable
  for use by module-assistant or kernel-package.
@@ -222,7 +222,7 @@ Breaks:
  glx-alternative-nvidia (<< 0.6.91),
 Replaces:
  glx-alternative-nvidia (<< 0.6.91),
-Description: NVIDIA binary Xorg driver${nvidia:LegacyDesc}
+Description: NVIDIA binary Xorg driver${nvidia:VariantDesc}
  The NVIDIA binary driver provides optimized hardware acceleration of
  OpenGL/GLX/EGL/GLES applications via a direct-rendering X Server
  for graphics cards using NVIDIA chip sets.
@@ -268,7 +268,7 @@ Breaks:
 Replaces:
  ${nvidia}-driver (<< 343.22-2~),
  nvidia-glx${nvidia:Legacy} (<< 319),
-Description: NVIDIA driver support binaries${nvidia:LegacyDesc}
+Description: NVIDIA driver support binaries${nvidia:VariantDesc}
  The NVIDIA binary driver provides optimized hardware acceleration of
  OpenGL/GLX/EGL/GLES applications via a direct-rendering X Server
  for graphics cards using NVIDIA chip sets.
@@ -289,7 +289,7 @@ Breaks:
  libgl1-${nvidia}-glx (<< 355.11-5),
 Replaces:
  libgl1-${nvidia}-glx (<< 355.11-5),
-Description: NVIDIA binary OpenGL/GLX configuration library${nvidia:LegacyDesc}
+Description: NVIDIA binary OpenGL/GLX configuration library${nvidia:VariantDesc}
  The NVIDIA binary driver provides optimized hardware acceleration of
  OpenGL/GLX/EGL/GLES applications via a direct-rendering X Server
  for graphics cards using NVIDIA chip sets.
@@ -325,7 +325,7 @@ Breaks:
  libgl1-${nvidia}-glx,
  libegl1-${nvidia},
  ${nvidia}-nonglvnd-vulkan-icd,
-Description: NVIDIA metapackage (OpenGL/GLX/EGL/GLES libraries)${nvidia:LegacyDesc}
+Description: NVIDIA metapackage (OpenGL/GLX/EGL/GLES libraries)${nvidia:VariantDesc}
  This metapackage depends on the NVIDIA binary libraries
  that provide optimized hardware acceleration of
  OpenGL/GLX/EGL/GLES applications via a direct-rendering X Server.
@@ -338,7 +338,7 @@ Depends:
  ${misc:Depends}
 Conflicts:
  libgl1-${nvidia}-glx-i386,
-Description: NVIDIA metapackage (OpenGL/GLX/EGL/GLES 32-bit libraries)${nvidia:LegacyDescShort}
+Description: NVIDIA metapackage (OpenGL/GLX/EGL/GLES 32-bit libraries)${nvidia:VariantDescShort}
  This metapackage helps the automatic installation of the 32-bit NVIDIA
  OpenGL/GLX/EGL/GLES libraries when installing ${nvidia}-driver-libs
  on amd64 with foreign architecture i386 enabled.
@@ -370,7 +370,7 @@ Breaks:
  ${nvidia}-driver-libs,
  libgl1-${nvidia}-glvnd-glx,
  ${nvidia}-vulkan-icd,
-Description: NVIDIA metapackage (non-GLVND OpenGL/GLX/EGL/GLES libraries)${nvidia:LegacyDescShort}
+Description: NVIDIA metapackage (non-GLVND OpenGL/GLX/EGL/GLES libraries)${nvidia:VariantDescShort}
  This metapackage depends on the (non-GLVND) NVIDIA binary libraries
  that provide optimized hardware acceleration of
  OpenGL/GLX/EGL/GLES applications via a direct-rendering X Server.
@@ -383,7 +383,7 @@ Depends:
  ${misc:Depends}
 Conflicts:
  libgl1-${nvidia}-glx-i386,
-Description: NVIDIA metapackage (non-GLVND OpenGL/EGL etc. 32-bit libraries)${nvidia:LegacyDescShort}
+Description: NVIDIA metapackage (non-GLVND OpenGL/EGL etc. 32-bit libraries)${nvidia:VariantDescShort}
  This metapackage helps the automatic installation of the 32-bit NVIDIA
  OpenGL/GLX/EGL/GLES libraries when installing
  ${nvidia}-driver-libs-nonglvnd
@@ -463,7 +463,7 @@ Depends:
  ${shlibs:Depends}, ${misc:Depends}
 Provides:
  libglx-vendor,
-Description: NVIDIA binary GLX library${nvidia:LegacyDesc}
+Description: NVIDIA binary GLX library${nvidia:VariantDesc}
  GLX ("OpenGL Extension to the X Window System") provides an interface between
  OpenGL and the X Window System as well as extensions to OpenGL itself.
  .
@@ -504,7 +504,7 @@ Depends:
  ${misc:Depends}
 Provides:
  libgl1-nvidia-glx-any,
-Description: NVIDIA binary OpenGL/GLX library (GLVND variant)${nvidia:LegacyDesc}
+Description: NVIDIA binary OpenGL/GLX library (GLVND variant)${nvidia:VariantDesc}
  The NVIDIA binary driver provides optimized hardware acceleration of
  OpenGL/GLX/EGL/GLES applications via a direct-rendering X Server
  for graphics cards using NVIDIA chip sets.
@@ -539,7 +539,7 @@ Provides:
  libgl1-nvidia-glx-any,
 Conflicts:
  libgl1-${nvidia}-glvnd-glx,
-Description: NVIDIA binary OpenGL/GLX library (non-GLVND variant)${nvidia:LegacyDesc}
+Description: NVIDIA binary OpenGL/GLX library (non-GLVND variant)${nvidia:VariantDesc}
  The NVIDIA binary driver provides optimized hardware acceleration of
  OpenGL/GLX/EGL/GLES applications via a direct-rendering X Server
  for graphics cards using NVIDIA chip sets.
@@ -567,7 +567,7 @@ Breaks:
  libgl1-${nvidia}-glx (<< 355.11-5),
 Replaces:
  libgl1-${nvidia}-glx (<< 355.11-5),
-Description: NVIDIA binary OpenGL/GLX core libraries${nvidia:LegacyDesc}
+Description: NVIDIA binary OpenGL/GLX core libraries${nvidia:VariantDesc}
  The NVIDIA binary driver provides optimized hardware acceleration of
  OpenGL/GLX/EGL/GLES applications via a direct-rendering X Server
  for graphics cards using NVIDIA chip sets.
@@ -608,7 +608,7 @@ Depends:
 Conflicts:
  ${nvidia}-driver-libs,
  libgl1-${nvidia}-glvnd-glx,
-Description: NVIDIA binary EGL library (non-GLVND variant)${nvidia:LegacyDesc}
+Description: NVIDIA binary EGL library (non-GLVND variant)${nvidia:VariantDesc}
  EGL provides a platform-agnostic mechanism for creating rendering surfaces
  for use with other graphics libraries, such as OpenGL|ES.
  .
@@ -624,7 +624,7 @@ Depends:
  ${nvidia}-alternative (= ${binary:Version}),
  lib${nvidia}-eglcore (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
-Description: NVIDIA binary EGL library${nvidia:LegacyDesc}
+Description: NVIDIA binary EGL library${nvidia:VariantDesc}
  EGL provides a platform-agnostic mechanism for creating rendering surfaces
  for use with other graphics libraries, such as OpenGL|ES.
  .
@@ -675,7 +675,7 @@ Pre-Depends:
 Depends:
  libgles-${nvidia-}1 (= ${binary:Version}),
  ${misc:Depends}
-Description: NVIDIA binary OpenGL|ES 1.x library (transitional)${nvidia:LegacyDesc}
+Description: NVIDIA binary OpenGL|ES 1.x library (transitional)${nvidia:VariantDesc}
  OpenGL|ES is a cross-platform API for full-function 2D and 3D graphics on
  embedded systems - including consoles, phones, appliances and vehicles.
  It contains a subset of OpenGL plus a number of extensions for the
@@ -696,7 +696,7 @@ Depends:
  libgles1 (>= 0.2.999) | libgles1-glvnd-nvidia,
  lib${nvidia}-eglcore (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
-Description: NVIDIA binary OpenGL|ES 1.x library${nvidia:LegacyDesc}
+Description: NVIDIA binary OpenGL|ES 1.x library${nvidia:VariantDesc}
  OpenGL|ES is a cross-platform API for full-function 2D and 3D graphics on
  embedded systems - including consoles, phones, appliances and vehicles.
  It contains a subset of OpenGL plus a number of extensions for the
@@ -752,7 +752,7 @@ Pre-Depends:
 Depends:
  libgles-${nvidia-}2 (= ${binary:Version}),
  ${misc:Depends}
-Description: NVIDIA binary OpenGL|ES 2.x library (transitional)${nvidia:LegacyDesc}
+Description: NVIDIA binary OpenGL|ES 2.x library (transitional)${nvidia:VariantDesc}
  OpenGL|ES is a cross-platform API for full-function 2D and 3D graphics on
  embedded systems - including consoles, phones, appliances and vehicles.
  It contains a subset of OpenGL plus a number of extensions for the
@@ -774,7 +774,7 @@ Depends:
  libgles2 (>= 0.2.999) | libgles2-glvnd-nvidia,
  lib${nvidia}-eglcore (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
-Description: NVIDIA binary OpenGL|ES 2.x library${nvidia:LegacyDesc}
+Description: NVIDIA binary OpenGL|ES 2.x library${nvidia:VariantDesc}
  OpenGL|ES is a cross-platform API for full-function 2D and 3D graphics on
  embedded systems - including consoles, phones, appliances and vehicles.
  It contains a subset of OpenGL plus a number of extensions for the
@@ -801,7 +801,7 @@ Provides:
  libnvidia-eglcore-${nvidia:Version},
 Conflicts:
  libnvidia-eglcore-${nvidia:Version},
-Description: NVIDIA binary EGL core libraries${nvidia:LegacyDesc}
+Description: NVIDIA binary EGL core libraries${nvidia:VariantDesc}
  EGL provides a platform-agnostic mechanism for creating rendering surfaces
  for use with other graphics libraries, such as OpenGL|ES.
  .
@@ -868,7 +868,7 @@ Enhances:
  libvdpau1,
 Provides:
  vdpau-driver,
-Description: Video Decode and Presentation API for Unix - NVIDIA driver${nvidia:LegacyDescShort}
+Description: Video Decode and Presentation API for Unix - NVIDIA driver${nvidia:VariantDescShort}
  These libraries provide the Video Decode and Presentation API for Unix.
  They provide accelerated video playback (incl. H.264) for the supported
  graphics cards.
@@ -914,7 +914,7 @@ Provides:
  vulkan-icd,
 Conflicts:
  ${nvidia}-nonglvnd-vulkan-icd,
-Description: NVIDIA Vulkan installable client driver (ICD)${nvidia:LegacyDesc}
+Description: NVIDIA Vulkan installable client driver (ICD)${nvidia:VariantDesc}
  Vulkan is a multivendor open standard by the Khronos Group for 3D graphics.
  .
  This metapackage provides the NVIDIA installable client driver (ICD) for
@@ -954,7 +954,7 @@ Provides:
  vulkan-icd,
 Conflicts:
  ${nvidia}-vulkan-icd,
-Description: NVIDIA Vulkan ICD (non-GLVND variant)${nvidia:LegacyDesc}
+Description: NVIDIA Vulkan ICD (non-GLVND variant)${nvidia:VariantDesc}
  Vulkan is a multivendor open standard by the Khronos Group for 3D graphics.
  .
  This metapackage provides the NVIDIA installable client driver (ICD) for
@@ -971,7 +971,7 @@ Recommends:
  ${nvidia:kmod:binary},
 Suggests:
  ${nvidia:kmod:source},
-Description: NVIDIA System Management Interface${nvidia:LegacyDesc}
+Description: NVIDIA System Management Interface${nvidia:VariantDesc}
  The NVIDIA Management Library (NVML) provides a monitoring and management API.
  The application "nvidia-smi" is the NVIDIA System Management Interface (NVSMI)
  and provides a command line interface to this functionality.
@@ -990,7 +990,7 @@ Depends:
 Provides:
  libnvidia-ml.so.1 (= ${nvidia:Version}),
 Homepage: https://developer.nvidia.com/nvidia-management-library-NVML
-Description: NVIDIA Management Library (NVML) runtime library${nvidia:LegacyDesc}
+Description: NVIDIA Management Library (NVML) runtime library${nvidia:VariantDesc}
  The NVIDIA Management Library (NVML) provides a monitoring and management API.
  It provides a direct access to the queries and commands exposed via nvidia-smi.
  .
@@ -1056,7 +1056,7 @@ Provides:
  libcuda-9.1-1,
  libcuda-9.1-1-i386 [i386],
 Homepage: https://www.nvidia.com/CUDA
-Description: NVIDIA CUDA Driver Library${nvidia:LegacyDesc}
+Description: NVIDIA CUDA Driver Library${nvidia:VariantDesc}
  The Compute Unified Device Architecture (CUDA) enables NVIDIA
  graphics processing units (GPUs) to be used for massively parallel
  general purpose computation.
@@ -1075,7 +1075,7 @@ Multi-Arch: foreign
 Depends:
  ${libcuda1},
  ${misc:Depends}
-Description: NVIDIA CUDA 32-bit runtime library${nvidia:LegacyDesc}
+Description: NVIDIA CUDA 32-bit runtime library${nvidia:VariantDesc}
  This metapackage helps the automatic installation of the 32-bit NVIDIA CUDA
  library when installing ${libcuda1} on amd64 with foreign
  architecture i386 enabled.
@@ -1091,7 +1091,7 @@ Provides:
  libnvidia-compiler-${nvidia:Version},
 Conflicts:
  libnvidia-compiler-${nvidia:Version},
-Description: NVIDIA runtime compiler library${nvidia:LegacyDesc}
+Description: NVIDIA runtime compiler library${nvidia:VariantDesc}
  The Compute Unified Device Architecture (CUDA) enables NVIDIA
  graphics processing units (GPUs) to be used for massively parallel
  general purpose computation.
@@ -1110,7 +1110,7 @@ Provides:
  libnvidia-fatbinaryloader-${nvidia:Version},
 Conflicts:
  libnvidia-fatbinaryloader-${nvidia:Version},
-Description: NVIDIA FAT binary loader${nvidia:LegacyDesc}
+Description: NVIDIA FAT binary loader${nvidia:VariantDesc}
  The Compute Unified Device Architecture (CUDA) enables NVIDIA
  graphics processing units (GPUs) to be used for massively parallel
  general purpose computation.
@@ -1124,7 +1124,7 @@ Pre-Depends:
  ${misc:Pre-Depends}
 Depends:
  ${shlibs:Depends}, ${misc:Depends}
-Description: NVIDIA PTX JIT Compiler${nvidia:LegacyDesc}
+Description: NVIDIA PTX JIT Compiler${nvidia:VariantDesc}
  The Compute Unified Device Architecture (CUDA) enables NVIDIA
  graphics processing units (GPUs) to be used for massively parallel
  general purpose computation.
@@ -1139,7 +1139,7 @@ Pre-Depends:
 Depends:
  ${libcuda1} (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
-Description: NVIDIA CUDA Video Decoder runtime library${nvidia:LegacyDesc}
+Description: NVIDIA CUDA Video Decoder runtime library${nvidia:VariantDesc}
  The Compute Unified Device Architecture (CUDA) enables NVIDIA
  graphics processing units (GPUs) to be used for massively parallel
  general purpose computation.
@@ -1157,7 +1157,7 @@ Pre-Depends:
 Depends:
  ${libcuda1} (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
-Description: NVENC Video Encoding runtime library${nvidia:LegacyDesc}
+Description: NVENC Video Encoding runtime library${nvidia:VariantDesc}
  The NVENC Video Encoding library provides an interface to video encoder
  hardware on supported NVIDIA GPUs.
  .
@@ -1171,7 +1171,7 @@ Pre-Depends:
 Depends:
  ${libcuda1} (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
-Description: NVIDIA OpenGL-based Inband Frame Readback runtime library${nvidia:LegacyDescShort}
+Description: NVIDIA OpenGL-based Inband Frame Readback runtime library${nvidia:VariantDescShort}
  The NVIDIA OpenGL-based Inband Frame Readback (NvIFROpenGL) library provides
  a high performance, low latency interface to capture and optionally encode an
  OpenGL framebuffer. NvIFROpenGL is a private API that is only available to
@@ -1187,7 +1187,7 @@ Pre-Depends:
 Depends:
  ${libcuda1} (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
-Description: NVIDIA OpenGL-based Framebuffer Capture runtime library${nvidia:LegacyDesc}
+Description: NVIDIA OpenGL-based Framebuffer Capture runtime library${nvidia:VariantDesc}
  The NVIDIA OpenGL-based Framebuffer Capture (NvFBCOpenGL) library provides
  a high performance, low latency interface to capture and optionally encode an
  OpenGL framebuffer. NvFBCOpenGL is a private API that is only available to
@@ -1227,7 +1227,7 @@ Enhances:
  libopencl1,
 Provides:
  opencl-icd,
-Description: NVIDIA OpenCL installable client driver (ICD)${nvidia:LegacyDesc}
+Description: NVIDIA OpenCL installable client driver (ICD)${nvidia:VariantDesc}
  OpenCL (Open Computing Language) is a multivendor open standard for
  general-purpose parallel programming of heterogeneous systems that include
  CPUs, GPUs and other processors.
