--- a/debian/rules
+++ b/debian/rules
@@ -35,8 +35,8 @@ current			 = $(if $(legacy),$(patsubst -%,%,$(legacy)),current)
 has_uvm			 = $(filter $(DEB_HOST_ARCH),$(filter-out $(NO_UVM_ARCH_LIST),$(ARCH_LIST)))
 has_vulkan		 = $(filter $(DEB_HOST_ARCH),$(filter-out $(NO_VULKAN_ARCH_LIST),$(ARCH_LIST)))
 legacy			 = $(if $(NVIDIA_LEGACY),-legacy-$(NVIDIA_LEGACY)xx)
-legacy_description	 = $(if $(NVIDIA_LEGACY), ($(NVIDIA_LEGACY)xx legacy version))
-legacy_description_short = $(if $(NVIDIA_LEGACY), ($(NVIDIA_LEGACY)xx legacy))
+variant_description	 = $(if $(NVIDIA_LEGACY), ($(NVIDIA_LEGACY)xx legacy version))
+variant_description_short = $(if $(NVIDIA_LEGACY), ($(NVIDIA_LEGACY)xx legacy))
 trailing_minus		 = $(if $(filter %0 %1 %2 %3 %4 %5 %6 %7 %8 %9,$(legacy)),-)
 watch_pattern		 = $(or $(WATCH_PATTERN),$(if $(WATCH_VERSION),$(WATCH_VERSION)(?:\.[\d\.\-]+)?),\d[\d\.\-]*)
 standards_version	:= $(shell sed -rn 's/Standards-Version: (.*)/\1/p' debian/control)
@@ -299,8 +299,8 @@ override_dh_gencontrol:
 		-V'nvidia:if-legacy=$(nvidia_if_legacy)' \
 		-V'libcuda1=$(libcuda1)' \
 		-V'nvidia:Legacy=$(legacy)' \
-		-V'nvidia:LegacyDesc=$(legacy_description)' \
-		-V'nvidia:LegacyDescShort=$(legacy_description_short)' \
+		-V'nvidia:VariantDesc=$(variant_description)' \
+		-V'nvidia:VariantDescShort=$(variant_description_short)' \
 		-V'nvidia:legacy-check=$(NVIDIA_LEGACY_CHECK)' \
 		-V'nvidia-settings=$(NVIDIA_SETTINGS)' \
 		$(foreach a,$(ARCH_CANDIDATES),-V'arch:$a=$(filter $a,$(DRIVER_ARCH_LIST))') \
@@ -313,8 +313,8 @@ override_dh_gencontrol:
 
 # used by dpkg-genchanges
 debian/substvars:
-	echo 'nvidia:LegacyDesc=$(legacy_description)' > $@
-	echo 'nvidia:LegacyDescShort=$(legacy_description_short)' >> $@
+	echo 'nvidia:VariantDesc=$(variant_description)' > $@
+	echo 'nvidia:VariantDescShort=$(variant_description_short)' >> $@
 
 # Do not run dh_strip here.  The NVIDIA license says:
 #
