set debian-branch

--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -8,4 +8,4 @@ compression = gz
 tarball-dir = ../tarballs-nvidia-graphics-drivers/%(version)s
 component = [ 'amd64', ]
 debian-tag = debian/%(version)s
-debian-branch = master
+debian-branch = 418
