--- a/debian/control.in
+++ b/debian/control.in
@@ -47,6 +47,7 @@ Recommends:
 Suggests:
  ${nvidia:kmod:source},
 Provides:
+ nvidia-driver-any,
  nvidia-glx-any,
 Breaks:
  nvidia-glx${nvidia:Variant},
@@ -311,6 +312,8 @@ Recommends:
  libgles-${nvidia-}2 (= ${binary:Version}),
  lib${nvidia}-cfg1 (= ${binary:Version}),
  ${nvidia}-vulkan-icd (= ${binary:Version}) [amd64 i386],
+Provides:
+ nvidia-driver-libs-any,
 Conflicts:
  libgldispatch0-nvidia,
 # libglvnd0-nvidia,
@@ -357,6 +360,8 @@ Recommends:
  libgles-${nvidia-}2 (= ${binary:Version}),
  lib${nvidia}-cfg1 (= ${binary:Version}),
  ${nvidia}-nonglvnd-vulkan-icd (= ${binary:Version}) [amd64 i386],
+Provides:
+ nvidia-driver-libs-any,
 Conflicts:
  libgldispatch0-nvidia,
 # libglvnd0-nvidia,
