--- a/debian/control.in
+++ b/debian/control.in
@@ -304,7 +304,7 @@ Depends:
  ${nvidia}-egl-icd (= ${binary:Version}),
  ${misc:Depends}
 Recommends:
- ${nvidia}-driver-libs-i386 [amd64],
+ ${nvidia}-driver-libs-i386 (= ${binary:Version}) [amd64],
  libopengl0 | libopengl0-glvnd-nvidia,
  libglx-${nvidia-}0 (= ${binary:Version}),
  libgles-${nvidia-}1 (= ${binary:Version}),
@@ -334,7 +334,7 @@ Package: ${nvidia}-driver-libs-i386
 Architecture: i386
 Multi-Arch: foreign
 Depends:
- ${nvidia}-driver-libs,
+ ${nvidia}-driver-libs (= ${binary:Version}),
  ${misc:Depends}
 Conflicts:
  libgl1-${nvidia}-glx-i386,
@@ -351,7 +351,7 @@ Depends:
  libegl1-${nvidia} (= ${binary:Version}),
  ${misc:Depends}
 Recommends:
- ${nvidia}-driver-libs-nonglvnd-i386 [amd64],
+ ${nvidia}-driver-libs-nonglvnd-i386 (= ${binary:Version}) [amd64],
  libglx-${nvidia-}0 (= ${binary:Version}),
  libgles-${nvidia-}1 (= ${binary:Version}),
  libgles-${nvidia-}2 (= ${binary:Version}),
@@ -379,7 +379,7 @@ Package: ${nvidia}-driver-libs-nonglvnd-i386
 Architecture: i386
 Multi-Arch: foreign
 Depends:
- ${nvidia}-driver-libs-nonglvnd,
+ ${nvidia}-driver-libs-nonglvnd (= ${binary:Version}),
  ${misc:Depends}
 Conflicts:
  libgl1-${nvidia}-glx-i386,
@@ -1030,7 +1030,7 @@ Recommends:
 # help nvidia-persistenced by pre-selecting the correct provider for libnvidia-cfg1-any
  lib${nvidia}-cfg1 (= ${binary:Version}),
  nvidia-persistenced,
- ${libcuda1}-i386 [amd64],
+ ${libcuda1}-i386 (= ${binary:Version}) [amd64],
 Suggests:
  nvidia-cuda-mps,
  ${nvidia:kmod:source},
@@ -1073,7 +1073,7 @@ Package: ${libcuda1}-i386
 Architecture: i386
 Multi-Arch: foreign
 Depends:
- ${libcuda1},
+ ${libcuda1} (= ${binary:Version}),
  ${misc:Depends}
 Description: NVIDIA CUDA 32-bit runtime library${nvidia:VariantDesc}
  This metapackage helps the automatic installation of the 32-bit NVIDIA CUDA
