provide nvidia-vulkan-icd-any

--- a/debian/control
+++ b/debian/control
@@ -905,6 +905,7 @@ Enhances:
  libvulkan1,
 Provides:
  vulkan-icd,
+ nvidia-vulkan-icd-any,
 Conflicts:
  ${nvidia}-nonglvnd-vulkan-icd,
 Description: NVIDIA Vulkan installable client driver (ICD)${nvidia:VariantDesc}
@@ -945,6 +946,7 @@ Enhances:
  libvulkan1,
 Provides:
  vulkan-icd,
+ nvidia-vulkan-icd-any,
 Conflicts:
  ${nvidia}-vulkan-icd,
 Description: NVIDIA Vulkan ICD (non-GLVND variant)${nvidia:VariantDesc}
