--- a/debian/control.in
+++ b/debian/control.in
@@ -917,6 +917,7 @@ Enhances:
  libvulkan1,
 Provides:
  vulkan-icd,
+ nvidia-vulkan-icd-any,
 Conflicts:
  ${nvidia}-nonglvnd-vulkan-icd,
 Description: NVIDIA Vulkan installable client driver (ICD)${nvidia:VariantDesc}
@@ -957,6 +958,7 @@ Enhances:
  libvulkan1,
 Provides:
  vulkan-icd,
+ nvidia-vulkan-icd-any,
 Conflicts:
  ${nvidia}-vulkan-icd,
 Description: NVIDIA Vulkan ICD (non-GLVND variant)${nvidia:VariantDesc}
