--- a/debian/not-installed.in
+++ b/debian/not-installed.in
@@ -13,6 +13,7 @@ nvidia-installer.1
 pkg-history.txt
 
 NVIDIA_Changelog
+supported-gpus.json
 
 nvidia-modprobe
 nvidia-modprobe.1
@@ -31,7 +32,9 @@ libnvidia-gtk3.so.#VERSION#
 nvidia-xconfig
 nvidia-xconfig.1
 
-libnvidia-egl-wayland.so.1.1.4
+nvidia-powerd
+
+libnvidia-egl-wayland.so.1.1.5
 10_nvidia_wayland.json
 
 libEGL.so.1.1.0
