--- a/debian/nvidia-driver-bin.install.in
+++ b/debian/nvidia-driver-bin.install.in
@@ -1,4 +1,5 @@
 nvidia-bug-report.sh		usr/lib/#PRIVATE#/
 nvidia-debugdump		usr/lib/#PRIVATE#/
+nvidia-ngx-updater		usr/lib/#PRIVATE#/
 nvidia-application-profiles-#VERSION#-rc	usr/share/nvidia/
 nvidia-application-profiles-#VERSION#-key-documentation	usr/share/nvidia/
