Add nvidia-peermem kernel module

--- a/debian/module/debian/install.template.in
+++ b/debian/module/debian/install.template.in
@@ -1,4 +1,5 @@
 #MODULE#.ko			lib/modules/#KVERS#/nvidia/
 #MODULE#-modeset.ko		lib/modules/#KVERS#/nvidia/
 #MODULE#-drm.ko			lib/modules/#KVERS#/nvidia/
+#MODULE#-peermem.ko		lib/modules/#KVERS#/nvidia/
 #HAS_UVM##MODULE#-uvm.ko	lib/modules/#KVERS#/nvidia/
