--- a/debian/nvidia-driver-bin.install.in
+++ b/debian/nvidia-driver-bin.install.in
@@ -3,3 +3,5 @@ nvidia-debugdump		usr/lib/#PRIVATE#/
 nvidia-ngx-updater		usr/lib/#PRIVATE#/
 nvidia-application-profiles-#VERSION#-rc	usr/share/nvidia/
 nvidia-application-profiles-#VERSION#-key-documentation	usr/share/nvidia/
+
+firmware/gsp.bin    lib/firmware/nvidia/#VERSION#
