--- a/debian/control.in
+++ b/debian/control.in
@@ -915,6 +915,7 @@ Depends:
  nvidia-support,
  ${nvidia}-alternative (= ${binary:Version}),
  lib${nvidia}-ptxjitcompiler1 (= ${binary:Version}),
+ lib${nvidia}-nvvm4 (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
 Recommends:
  ${nvidia:kmod:binary},
@@ -997,6 +998,20 @@ Description: NVIDIA runtime compiler library${nvidia:VariantDesc}
  general purpose computation.
  .
  This package contains the runtime compiler library.
+
+Package: lib${nvidia}-nvvm4
+Architecture: i386 amd64 ${arch:ppc64el}
+Multi-Arch: same
+Pre-Depends:
+ ${misc:Pre-Depends}
+Depends:
+ ${shlibs:Depends}, ${misc:Depends}
+Description: NVIDIA NVVM${nvidia:VariantDesc}
+ The Compute Unified Device Architecture (CUDA) enables NVIDIA
+ graphics processing units (GPUs) to be used for massively parallel
+ general purpose computation.
+ .
+ This package contains the runtime NVVM library.
 
 Package: lib${nvidia}-ptxjitcompiler1
 Architecture: i386 amd64 ${arch:ppc64el}
