--- a/debian/libnvidia-compiler.install.in
+++ b/debian/libnvidia-compiler.install.in
@@ -1,1 +1,2 @@
-libnvidia-compiler.so.#VERSION#		#LIBDIR#/
+libnvidia-compiler.so.#VERSION#			#LIBDIR#/
+libnvidia-compiler-next.so.#VERSION#	#LIBDIR#/
