Add libnvidia-vulkan-producer to not-installed as it depends on libnvidia-egl-wayland which is also not-installed. Add libnvidia-egl-gbm to not-installed to match libnvidia-egl-wayland.

--- a/debian/not-installed.in
+++ b/debian/not-installed.in
@@ -41,6 +41,10 @@ nvidia-topologyd.conf.template
 
 libnvidia-egl-wayland.so.1.1.7
 10_nvidia_wayland.json
+libnvidia-vulkan-producer.so.#VERSION#
+
+libnvidia-egl-gbm.so.1.1.0
+15_nvidia_gbm.json
 
 libEGL.so.1.1.0
 libGL.so.1.7.0
