--- a/debian/not-installed.in
+++ b/debian/not-installed.in
@@ -38,6 +38,10 @@ nvidia-powerd
 
 libnvidia-egl-wayland.so.1.1.7
 10_nvidia_wayland.json
+libnvidia-vulkan-producer.so.#VERSION#
+
+libnvidia-egl-gbm.so.1.1.0
+15_nvidia_gbm.json
 
 libEGL.so.1.1.0
 libGL.so.1.7.0
