Wildcard egl-wayland lib in not-installed to protect from future version changes.

--- a/debian/not-installed.in
+++ b/debian/not-installed.in
@@ -39,7 +39,7 @@ nvidia-powerd
 nvidia-topologyd
 nvidia-topologyd.conf.template
 
-libnvidia-egl-wayland.so.1.1.7
+libnvidia-egl-wayland.so.*
 10_nvidia_wayland.json
 libnvidia-vulkan-producer.so.#VERSION#
 
