libnvidia-nvvm.so.4.0.0 requires the unversioned symlink to work

--- a/debian/libnvidia-nvvm4.links.in
+++ b/debian/libnvidia-nvvm4.links.in
@@ -1,1 +1,2 @@
 #LIBDIR#/#PRIVATE#/libnvidia-nvvm.so.4.0.0   #LIBDIR#/#PRIVATE#/libnvidia-nvvm.so.4
+#LIBDIR#/#PRIVATE#/libnvidia-nvvm.so.4       #LIBDIR#/#PRIVATE#/libnvidia-nvvm.so
