--- a/debian/nvidia-kernel-support.install.in
+++ b/debian/nvidia-kernel-support.install.in
@@ -1,3 +1,4 @@
 debian/nvidia-load.conf			etc/#PRIVATE#/
 debian/nvidia-modprobe.conf		etc/#PRIVATE#/
 debian/nvidia-blacklists-nouveau.conf	etc/#PRIVATE#/
+debian/alternate-install-present    usr/lib/nvidia/
