Exclude nvidia-dbus.conf and nvidia-powerd on non-amd64 arches

--- a/debian/nvidia-driver-bin.install.in
+++ b/debian/nvidia-driver-bin.install.in
@@ -1,8 +1,8 @@
-nvidia-bug-report.sh		usr/lib/#PRIVATE#/
-nvidia-debugdump		usr/lib/#PRIVATE#/
-nvidia-ngx-updater		usr/lib/#PRIVATE#/
-nvidia-powerd			usr/lib/#PRIVATE#/
-nvidia-application-profiles-#VERSION#-rc	usr/share/nvidia/
+nvidia-bug-report.sh					usr/lib/#PRIVATE#/
+nvidia-debugdump					usr/lib/#PRIVATE#/
+nvidia-ngx-updater					usr/lib/#PRIVATE#/
+#I386_EXCLUDED#nvidia-powerd				usr/lib/#PRIVATE#/
+nvidia-application-profiles-#VERSION#-rc		usr/share/nvidia/
 nvidia-application-profiles-#VERSION#-key-documentation	usr/share/nvidia/
 
 firmware/gsp.bin    lib/firmware/nvidia/#VERSION#
