--- a/debian/libnvidia-compiler.symbols.in
+++ b/debian/libnvidia-compiler.symbols.in
@@ -8,4 +8,18 @@ libnvidia-compiler.so.#VERSION# #PACKAGE# #MINVER#
  NvCliGetBufferData@Base 346
  NvCliLinkBitcode@Base 346
  NvCliQueryBinaryType@Base 349
+ __nvvmHandle@Base 515
+ nvvmAddModuleToProgram@Base 515
+ nvvmCompileProgram@Base 515
  nvvmCompilerProperty@Base 280
+ nvvmCreateProgram@Base 515
+ nvvmDestroyProgram@Base 515
+ nvvmGetCompiledResult@Base 515
+ nvvmGetCompiledResultSize@Base 515
+ nvvmGetErrorString@Base 515
+ nvvmGetProgramLog@Base 515
+ nvvmGetProgramLogSize@Base 515
+ nvvmIRVersion@Base 515
+ nvvmLazyAddModuleToProgram@Base 515
+ nvvmVerifyProgram@Base 515
+ nvvmVersion@Base 515
