--- a/debian/libnvidia-ptxjitcompiler1.symbols.in
+++ b/debian/libnvidia-ptxjitcompiler1.symbols.in
@@ -1,5 +1,16 @@
 libnvidia-ptxjitcompiler.so.1 #PACKAGE# #MINVER#
  __cuda_CallJitEntryPoint@Base 361
+ nvLinkerAddCubin@Base 515
+ nvLinkerAddFatbin@Base 515
+ nvLinkerCreate@Base 515
+ nvLinkerDestroy@Base 515
+ nvLinkerFinish@Base 515
+ nvLinkerGetErrorLog@Base 515
+ nvLinkerGetErrorLogSize@Base 515
+ nvLinkerGetInfoLog@Base 515
+ nvLinkerGetInfoLogSize@Base 515
+ nvLinkerGetLinkedCubin@Base 515
+ nvLinkerGetLinkedCubinSize@Base 515
  nvPTXCompilerCompile@Base 378
  nvPTXCompilerCreate@Base 378
  nvPTXCompilerDestroy@Base 378
